--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "geoip2/geoip2": " ^2.9",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
